# Tri-Ai

./: .firebaserc  .gitignore  .gitmodules  .metadata  LICENSE  README.md  firebase.json  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
assets/: webgpu_engine.html
ios/: Podfile
ios/Runner/: Info.plist  LlamaFlutterAndroidPlugin.h  LlamaFlutterAndroidPlugin.m
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/controllers/: chat_controller.dart  cloud_model_controller.dart  home_controller.dart  model_controller.dart  server_controller.dart  settings_controller.dart  task_controller.dart
lib/core/: colors.dart  constants.dart  routes.dart  theme.dart
lib/ffi/: sd_ffi_bindings.dart  sd_ffi_bindings_stub.dart
lib/models/: ai_model.dart  chat_message.dart  chat_session.dart  task_model.dart
lib/services/: app_log_service.dart  chat_export_service.dart  cloud_service.dart  crash_reporting_service.dart  device_info_native.dart  device_info_service.dart  device_info_web.dart  document_extractor_service.dart  download_native.dart  download_service.dart  download_web.dart  execution_service.dart  hive_service.dart  image_generation_notification_service.dart  inference_android.dart  inference_service.dart  inference_stub.dart  local_image_service.dart  openai_server_service.dart  openai_server_service_io.dart  openai_server_service_stub.dart  sd_isolate_processor.dart  sd_isolate_processor_io.dart  sd_isolate_processor_stub.dart  tunnel_service.dart
lib/utils/: thought_parser.dart
lib/views/: chat_view.dart  home_view.dart  log_view.dart  model_view.dart  search_view.dart  server_view.dart  settings_view.dart  task_view.dart
lib/widgets/: attachment_preview.dart  chat_bubble.dart  image_viewer.dart  thought_disclosure.dart  typing_indicator.dart
local_plugins/: .gitignore
local_plugins/flutter_litert_lm/: pubspec.yaml
local_plugins/flutter_litert_lm/android/: build.gradle.kts
local_plugins/llama_flutter_android/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
local_plugins/llama_flutter_android/android/: CMakeLists.txt  build.gradle.kts  settings.gradle
local_plugins/llama_flutter_android/ios/: llama_flutter_android.podspec
local_plugins/llama_flutter_android/lib/: llama_flutter_android.dart  llama_flutter_android_method_channel.dart  (+1 more)
local_plugins/sd_flutter_android/: README.md  pubspec.yaml
local_plugins/sd_flutter_android/android/: CMakeLists.txt  build.gradle  settings.gradle
local_plugins/sd_flutter_android/android/cmake/: FindOpenCL.cmake  FindVulkan.cmake
local_plugins/sd_flutter_android/android/src/main/: AndroidManifest.xml
local_plugins/sd_flutter_android/android/src/main/cpp/: sd_jni_wrapper.cpp
local_plugins/sd_flutter_android/android/src/main/kotlin/com/example/sd_flutter_android/: SdFlutterAndroidPlugin.kt
local_plugins/sd_flutter_android/android/src/test/kotlin/com/example/sd_flutter_android/: SdFlutterAndroidPluginTest.kt
web/: index.html  manifest.json
(+807 files in other folders)
